--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 h1{
   display: block;
-  margin: auto;
+  margin:40px auto;
   width: 20%;
+  padding: 20px;
+  border-radius: 10rem;
   text-align: center;
   font-family: 'Dangrek', cursive;
   font-size: 40px;
@@ -11,12 +13,10 @@ h1{
 h4{
   display:block;
   text-align: center;
-  border-radius: 20rem;
   width: 750px;
   margin:40px auto;
   font-size: 28px;
   font-family: 'Dangrek', cursive;
-  background-color: burlywood;
   color: green;
 }
 div{
@@ -28,6 +28,8 @@ div{
 }
 img{
   height: 300px;
+  width: 300px;
+  justify-content: space-around;
 }
 button{
   display:block;
@@ -53,6 +55,7 @@ ul{
   line-height: 2rem;
   color:green;
   font-weight: medium;
+  padding-bottom: 2rem;
 }
 footer{
   display: block;
@@ -61,4 +64,13 @@ footer{
   font-family: 'Dangrek', cursive;
   color: brown;
 
+}
+p{
+  font-family: 'Dangrek', cursive;
+  color: black;
+  font-size: 40px;
+}
+
+.barChart1{
+  background-color: lightgray;
 }
